--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
